<resources>
    <string name="app_name">Life Manager</string>
    <string name="amount_decimal_format">0.00</string>
    <string name="amount_decimal_format_unit">0.00元</string>
    <string name="in_sum">共计</string>
    <string name="amount_max">1E18</string>
    <string name="date_format_month">yyyy年MM月</string>
    <string name="date_format_day">yyyy年MM月dd日</string>
    <string name="date_format_month_day">MM月dd日</string>
    <string name="date_format_date">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="date_format_time">MM月dd日 HH:mm</string>
    <string name="to">到</string>

    <string name="expend">支出</string>
    <string name="income">收入</string>
    <string name="balance">结余</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="empty">空空如也</string>
    <string name="need_todo">还未完成</string>

    <string name="done">已完成</string>
    <string name="todo">未完成</string>
    <string name="bill_audit">账单统计</string>

    <string name="title_home">首页</string>
    <string name="title_bills">账单</string>
    <string name="title_works">事项</string>
    <string name="title_me">我</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="date_picker_title">时间</string>
    <string name="numeric_keyboard_clear">清除</string>
    <string name="numeric_keyboard_backspace">←</string>
    <string name="numeric_keyboard_confirm">确认</string>

    <string name="bill_note_input_hint">备注：说点什么吧...</string>
    <string name="work_note_input_hint">备注：说说怎么办吧...</string>
    <string name="work_title_input_hint">事项标题</string>
    <string name="note_none_hint">备注：这里空空如也...</string>
    <string name="audit_month_bill">月账单统计</string>
    <string name="delete_confirm_text">确认删除？</string>
    <string name="account_login">账号登陆</string>
    <string name="account_register">账号注册</string>

    <string name="data_download">强制下载</string>
    <string name="data_upload">强制上传</string>
    <string name="data_sync">智能同步</string>
    <string name="data_auto_sync">自动同步</string>

    <string name="on_data_sync">正在同步账户数据</string>
    <string name="on_data_download">正在下载账户数据</string>
    <string name="on_data_upload">正在上传账户数据</string>
    <string name="user_no_login">用户未登陆</string>
    <string name="no_login">未登陆</string>
    <string name="copy_uuid">已复制用户链接</string>

    <string name="on_send">正在发送</string>


    <string name="normal_issues">常见问题</string>
    <string name="praise">好评鼓励</string>
    <string name="about_us">关于我们</string>


    <string name="appName">软件名</string>
    <string name="account">用户名</string>
    <string name="please_input_account">请输入用户名</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="go_to_register">注册</string>
    <string name="password_differ">两次输入的密码不一致</string>
    <string name="third_method_login">第三方登录</string>
    <string name="if_login_is_meaning_to_agree">登录即代表您同意用户服务协议</string>
    <string name="the_service">服务</string>
    <string name="iv_project_icon">项目图标</string>
    <string name="tv_register">注册</string>
    <string name="tv_phone">手机号</string>
    <string name="et_phone">请输入手机号</string>
    <string name="bt_get_code">获取验证码</string>
    <string name="tv_code">验证码</string>
    <string name="et_code">请输入验证码</string>
    <string name="tv_name">用户名</string>
    <string name="et_name">请输入用户名</string>
    <string name="tv_password">密码</string>
    <string name="et_password">请输入密码</string>
    <string name="et_password2">请重复密码</string>

    <string name="password_no_empty">密码不能为空</string>

    <string name="bt_register">提交</string>
    <string name="delete_confirm_text_chain">选择删除方式</string>
    <string name="single_item">仅当前项</string>
    <string name="chain_item">所有相关项</string>
    <string name="edit_confirm_text_chain">选择修改方式</string>
    <string name="work_confirm_warning">还没说干什么呢</string>
    <string name="hello_blank_fragment">首页</string>
    <string name="select_to_merge">选择要合并的事项</string>
    <string name="select_to_share">选择要分享的联系人</string>
    <string name="new_friend">新建联系人信息</string>
    <string name="friend_name">备注</string>
    <string name="friend_uuid">链接</string>
    <string name="receive_work">收到一条分享的事项</string>

    <string name="network_error">网络错误</string>

    <string name="today">今天</string>
    <string name="this_week">本周</string>
    <string name="this_month">本月</string>
    <string name="this_year">今年</string>

    <string name="repeat_policy">单次</string>
    <string name="every_day">每天</string>
    <string name="every_week">每周</string>
    <string name="every_month">每月</string>
    <string name="every_year">每年</string>


    <string name="network_description_login_ok">登陆成功</string>
    <string name="network_description_login_error">密码错误</string>
    <string name="network_description_login_miss">用户不存在</string>

    <string name="network_description_register_ok">注册成功</string>
    <string name="network_description_register_error">输入不符合要求</string>
    <string name="network_description_register_exist">用户名已存在</string>

    <string name="network_description_download_ok">下载成功</string>
    <string name="network_description_download_error">用户认证失败</string>
    <string name="network_description_download_miss">云端用户数据不存在</string>

    <string name="network_description_upload_ok">上传成功</string>
    <string name="network_description_upload_error">用户认证失败</string>
    <string name="network_description_upload_fail">上传失败</string>

    <string name="network_description_sync_ok">同步成功</string>
    <string name="network_description_sync_error">用户认证失败</string>
    <string name="network_description_sync_miss">云端用户数据不存在</string>

    <string name="network_description_send_ok">发送成功</string>
    <string name="network_description_send_error">用户认证失败</string>
    <string name="network_description_send_miss">目标用户不存在</string>

    <string name="network_description_receive_ok">接受成功</string>
    <string name="network_description_receive_error">用户认证失败</string>
    <string name="network_description_receive_unknown">未知错误</string>
</resources>