<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f6"
    tools:context=".ui.works.WorkCheckActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_title"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:focusable="false"
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:inputType="text"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/work_title_input_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraint_layout_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_title">

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_format_date"
            android:textColor="@color/colorTextTeal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_deadline">

        <TextView
            android:id="@+id/textView_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/repeat_policy"
            android:textColor="@color/colorTextTeal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_repeat" />

    <EditText
        android:id="@+id/editText_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:ems="15"
        android:gravity="top|start"
        android:hint="@string/work_note_input_hint"
        android:inputType="textMultiLine"
        android:textColorHint="@color/colorTextHint"
        android:textCursorDrawable="@null"
        android:focusable="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_repeat"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_edit"
        android:background="@drawable/selector_primary_color_button"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_delete"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:background="@drawable/selector_primary_color_button"
        app:layout_constraintHorizontal_weight="1"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintStart_toEndOf="@id/button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>


